--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
     <script src="script.js"></script>
 </head>
 
+
+
 <body>
+    <br><br><br><br><br><br>
     <a href="/about">
-        <button class="button" style="vertical-align:middle; left: 100px;"><span>About Us</span></button>
+        <button class="button" style="vertical-align:middle; left: 100px;"><span>Generate Token</span></button>
     </a>   
 </body>
+
 
 
