--- a/index.html
+++ b/index.html
@@ -1,23 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap" rel="stylesheet">
-    <script src="script.js"></script>
+  <meta charset="UTF-8">
+  <title>JWT Auth Demo</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
-
-
-
 <body>
-    <br><br><br><br><br><br>
-    <a href="/about">
-        <button class="button" style="vertical-align:middle; left: 100px;"><span>Generate Token</span></button>
-    </a>   
+  <h1>JWT Authentication Demo</h1>
+
+  <div class="section">
+    <button id="generateBtn">Generate JWT</button>
+    <textarea id="jwtOutput" readonly placeholder="JWT token will appear here"></textarea>
+  </div>
+
+  <div class="section">
+    <input type="text" id="jwtInput" placeholder="Enter JWT token to validate">
+    <button id="validateBtn">Validate JWT</button>
+    <textarea id="validateOutput" readonly placeholder="Validation result will appear here"></textarea>
+  </div>
+
+  <script>
+    const generateBtn = document.getElementById('generateBtn');
+    const validateBtn = document.getElementById('validateBtn');
+    const jwtOutput = document.getElementById('jwtOutput');
+    const jwtInput = document.getElementById('jwtInput');
+    const validateOutput = document.getElementById('validateOutput');
+
+    generateBtn.addEventListener('click', async () => {
+      try {
+        const res = await fetch('https://http-auth-website.vercel.app/api/generate');
+        const data = await res.json();
+        jwtOutput.value = data.token || JSON.stringify(data);
+      } catch (err) {
+        jwtOutput.value = 'Error fetching token';
+      }
+    });
+
+    validateBtn.addEventListener('click', async () => {
+      try {
+        const token = jwtInput.value.trim();
+        const res = await fetch('https://http-auth-website.vercel.app/api/validate', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ token })
+        });
+        const data = await res.json();
+        validateOutput.value = JSON.stringify(data, null, 2);
+      } catch (err) {
+        validateOutput.value = 'Error validating token';
+      }
+    });
+  </script>
 </body>
-
-
-
+</html>
