--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
 
     generateBtn.addEventListener('click', async () => {
       try {
-        const res = await fetch('https://http-auth-website.vercel.app/api/generate');
+        const res = await fetch('https://http-auth-website.vercel.app/api/generate', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ fingerprint })
+        });        
         const data = await res.json();
         jwtOutput.value = data.token || JSON.stringify(data);
       } catch (err) {
@@ -56,4 +60,5 @@
   </script>
 </body>
 </html>
+
 
