--- a/index.html
+++ b/index.html
@@ -22,43 +22,7 @@
     <textarea id="validateOutput" readonly placeholder="Validation result will appear here"></textarea>
   </div>
 
-  <script>
-    const generateBtn = document.getElementById('generateBtn');
-    const validateBtn = document.getElementById('validateBtn');
-    const jwtOutput = document.getElementById('jwtOutput');
-    const jwtInput = document.getElementById('jwtInput');
-    const validateOutput = document.getElementById('validateOutput');
-
-    generateBtn.addEventListener('click', async () => {
-      try {
-        const res = await fetch('https://http-auth-website.vercel.app/api/generate', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({ fingerprint })
-        });        
-        const data = await res.json();
-        jwtOutput.value = data.token || JSON.stringify(data);
-      } catch (err) {
-        jwtOutput.value = 'Error fetching token';
-      }
-    });
-
-    validateBtn.addEventListener('click', async () => {
-      try {
-        const token = jwtInput.value.trim();
-        const res = await fetch('https://http-auth-website.vercel.app/api/validate', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({ token })
-        });
-        const data = await res.json();
-        validateOutput.value = JSON.stringify(data, null, 2);
-      } catch (err) {
-        validateOutput.value = 'Error validating token';
-      }
-    });
-  </script>
+  <!-- Include external JS -->
+  <script src="script.js"></script>
 </body>
 </html>
-
-
